fixed scroll, z-index, transition

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -7,6 +7,10 @@
   list-style: none;
 }
 
+.no-scroll {
+  overflow: hidden;
+}
+
 .header {
   position: absolute;
   width: 100%;
@@ -70,10 +74,10 @@
   height: 100%;
   padding: 29px 20px 0px 20px;
   background-color: var(--primary-bcg-color);
-  overflow-y: auto;
+   
   transform: translate(0, 0);
   transition: 0.5s;
-  z-index: 1;
+  z-index: 10;
 }
 
 .is-hidden {
@@ -152,6 +156,16 @@
     align-items: center;
   }
   
+  .logo {
+    transition-property: transform;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .logo:hover {
+    transform: scale(1.1);
+  }
+  
   .header-logo-img {
     width: 19px;
     height: 19px;
@@ -211,13 +225,18 @@
     border: 1px solid transparent;
     border-radius: 8px;
     position: relative;
-    /* transition-property: background-color;
-    transition-duration: 3s;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); */
+    transition-property: transform;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  
+  .header-link:hover {
+    transform: scale(1.2);
   }
 
-  .header-link:hover::after {
+  .header-link::after {
     content: "";
+    display: none;
     position: absolute;
     width: 100%;
     height: 1px;
@@ -225,6 +244,15 @@
     top: 20px;
     background-color: #FFFFFF;
     border-radius: 1px;
+    transform: scale(1.1);
+    transition-property: transform;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .header-link:hover::after {
+    display: block;
+    transform: scale(1.2)
   }
 }
 
